syntax = "proto3";

option java_multiple_files = true;
option java_package = "worker.grpc";

package worker;

service Worker {
    rpc Get(GetRequest) returns (GetResponse) {}
    rpc Set(SetRequest) returns (SetResponse) {}
}

service InternalWorker {
    rpc Get(InternalGetRequest) returns (GetResponse) {}
    rpc Set(InternalSetRequest) returns (SetResponse) {}
}

enum Status {
    OK = 0;
    FAILED = 1;
}

message GetRequest {
    string key = 1;
}

message InternalGetRequest {
    GetRequest request = 1;
    int32 hopCount = 2;
}

message GetResponse {
    Status status = 1;
    string value = 2;
}

message InternalSetRequest {
    SetRequest request = 1;
    int32 hopCount = 2;
}

message SetRequest {
    string key = 1;
    string value = 2;
}

message SetResponse {
    Status status = 1;
    string value = 2;
}